Closed
Bug 1917369
Opened 1 year ago
Closed 1 year ago
User Interaction Tracking for the Back Button Intervention fails in some cases
Categories
(Core :: DOM: Navigation, defect, P2)
Core
DOM: Navigation
Tracking
()
RESOLVED
FIXED
132 Branch
| Tracking | Status | |
|---|---|---|
| firefox132 | --- | fixed |
People
(Reporter: avandolder, Assigned: avandolder)
References
(Blocks 3 open bugs, Regressed 2 open bugs)
Details
Attachments
(1 file, 1 obsolete file)
No description provided.
| Assignee | ||
Comment 1•1 year ago
|
||
| Assignee | ||
Comment 2•1 year ago
|
||
Updated•1 year ago
|
Priority: -- → P1
Updated•1 year ago
|
Severity: -- → S2
Priority: P1 → P2
Updated•1 year ago
|
Severity: S2 → S3
| Assignee | ||
Updated•1 year ago
|
Pushed by avandolder@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/86aed500c77d
Track user interaction state in docshell's active entry. r=dom-core,peterv
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox132:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
Comment 6•1 year ago
|
||
Comment on attachment 9423343 [details]
Bug 1917369 - Only show the first history entry if it has user interaction. r?#dom-core
Revision D221390 was moved to bug 1924861. Setting attachment 9423343 [details] to obsolete.
Attachment #9423343 -
Attachment is obsolete: true
Updated•3 months ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•