Bug 1917369 - Track user interaction state in docshell's active entry. r=dom-core,peterv

Differential Revision: https://phabricator.services.mozilla.com/D221389